fixed spacing of both galleries and font size of request invite buttons

--- a/src/Components/event.css
+++ b/src/Components/event.css
@@ -200,36 +200,32 @@
   text-align: right;
 }
 
-.grid-container {
+.event-grid-container {
   display: flex;
   flex-direction: column;
 }
 
-.grid-row {
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.grid-item-div {
-  position: relative;
-  width: 320px;
-  height: 214px;
+.event-grid-row-container {
+  height: auto;
+  width: 95vw;
+  max-width: 100vw;
   display: flex;
-  align-items: center;
 }
 
-.grid-item {
-  width: 320px;
-  height: 214px;
+.event-grid-item-div {
+  width: 11.5vw;
+  height: 15vh;
+}
+
+.event-grid-item {
+  width: 11.5vw;
+  height: 15vh;
   max-width: 320px;
   max-height: 214px;
   position: absolute;
-  left: 50%;
   transform: translateX(-50%);
   margin: 0;
+  flex: 1;
   padding: 5px;
 }
 
